# blockfruit-miner

./: .gitignore  BUILD  CMakeLists.txt  LICENSE  build.sh  config.json  dependencies  main.cpp  run.sh
cmake/: boost.cmake  os.cmake
include/: configurations.hpp  terminal.hpp
src/: main.cpp
src/utils/: configurations.cpp  terminal.cpp
utils/: terminal.h
